test_case/rust-lang_rust/104833_1411089510.rs

    let _ = #[track_caller] async {
        //~^ ERROR attribute should be applied to a function definition [E0739]
    };
